# houdini-mcp

./: diag.py  houdini-command-client.py  houdini_mcp.py  houdini_mcp_server.py  pyproject.toml  readme.md
